--- a/package.json
+++ b/package.json
@@ -13,8 +13,19 @@
     "@sap/hdi-deploy": "^5.2.0",
     "@sap/xsenv": "^5.2.0",
     "@sap/xssec": "^3.6.1",
+    "@signpdf/signpdf": "^3.2.4",
+    "asn1js": "^3.0.5",
+    "buffer": "^6.0.3",
+    "cors": "^2.8.5",
     "express": "^4",
-    "passport": "^0.7.0"
+    "fontkit": "^2.0.2",
+    "fs": "^0.0.1-security",
+    "node-forge": "^1.3.1",
+    "node-signpdf": "^3.0.0",
+    "passport": "^0.7.0",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.15.0",
+    "pkijs": "^3.2.4"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
@@ -33,7 +44,6 @@
   },
   "cds": {
     "requires": {
-      
       "db": "hana"
     },
     "hana": {
